--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "simple-node-app",
+  "name": "websocket-example",
   "version": "1.0.0",
-  "description": "A simple Node.js app for Render",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.4"
+    "express": "^4.18.2",
+    "ws": "^8.13.0"
   }
 }
