--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "websocket-example",
+  "name": "weather-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ws": "^8.13.0"
+    "express": "^4.18.2"
   }
 }
